[package]
name = "what3words"
version = "0.1.1"
edition = "2021"
description = "This is a client for What3Words v3 API, allowing you to convert coordinates to three-word addresses and vice versa."
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true

[package.metadata]
license = "GPL-3.0"
